<resources>
    <string name="app_name">Tests and Quizzes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Button -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="done">Готово</string>

    <!-- Main Menu -->
    <string name="main_tests">Тесты</string>
    <string name="main_quizzes">Викторины</string>
    <string name="main_survival_mode">Режим на выживание</string>
    <string name="main_prestige">Престиж</string>
    <string name="main_mini_tests">Мини-тесты</string>
    <string name="main_shop">Магазин</string>
    <string name="main_exit">EXIT</string>

    <!-- Categories and Difficulties -->
    <string name="edit_cat_easy">Легкий</string>
    <string name="edit_cat_norm">Средний</string>
    <string name="edit_cat_hard">Сложный</string>
    <string name="edit_cat_percent"> --%</string>
    <string name="quantity_question">Количество вопросов</string>
    <string name="difficulty_level">Уровень сложности</string>
    <string name="best_result">Лучший результат</string>

    <!-- Result dialog fragment -->
    <string name="bt_continue">Продолжить</string>
    <string name="bt_share_result">Поделиться</string>
    <string name="bt_try_again">Ещё раз</string>
    <string name="congratulations">Поздравляем</string>
    <string name="regret">Сожалеем</string>
    <string name="error_result">Ошибка вывода результата!!!</string>

    <string name="result_desc">Вы правильно ответили на %s вопросов из %s \n
        Статистика правильных ответов составила %s%%\n %s</string>
    <string name="quantity_of_hint_TF">%1$s из 2</string>
    <string name="number_of_question_TF">%1$s из %2$s</string>
    <string name="exite_from_test">Выход из теста</string>
    <string name="test_exit_confirmation">Вы действительно хотите закончить прохождение теста и вернуться назад?</string>
    <string name="get_help_tf">Использовать подсказку</string>
    <string name="get_help_confirmation_tf">Вы действительно хотите использовать подсказку?</string>
    <string name="no_help">Подсказка не доступна</string>
    <string name="no_help_discription">К сожалению у Вас закончились подсказки, Вы можете пополнить их перейдя на вкладку для пополнения подсказок</string>
    <string name="get_hint">Получить подсказку</string>
    <string name="quantity_of_hint">Количество подсказок:</string>
    <string name="time_until_free_hint">Время до бесплатной подсказки</string>
    <string name="get_now">Получить сейчас</string>
    <string name="cancel">Отмена</string>
    <string name="from_hint">%s из 2</string>
    <string name="btn_get">Получить</string>
    <string name="hint_warning_max_hint">Достигнуто максимальное количество подсказок</string>
    <string name="advertising_not_load">Подождите несколько секунд пока реклама загрузиться</string>
    <string name="maximum_limit_of_free_top_ups">Превышен максимальный дневной лимит бесплатных пополнений</string>
    <string name="hint_has_already_been_used">Подсказка уже была использована</string>

    <!-- Avatar Dialog Fragment -->
    <string name="avatar_info">Получайте аватарки в награду за призовые места в событиях или премиум пропуске,
        а также покупайте в магазине</string>
    <string name="avatar_logo">Аватарки</string>

</resources>